# AgentCircuit

./: .gitignore  README.md  pyproject.toml  verify_script.py
agentfuse/: __init__.py  budget.py  errors.py  medic.py  pricing.py  providers.py  rca.py  storage.py  strategies.py
agentfuse/adapters/: __init__.py  autogen.py  base.py  crewai.py  langchain.py  langgraph.py
airos/: __init__.py  cli.py  core.py  errors.py  medic.py  providers.py  rca.py  storage.py  strategies.py
airos/adapters/: __init__.py  autogen.py  base.py  crewai.py  langchain.py  langgraph.py
dashboard/: .gitignore  api_server.py  package-lock.json  package.json
dashboard/app/: page.tsx
dashboard/components/: ConfidenceWidget.tsx  FailureRootCausesChart.tsx  MTTRCard.tsx  MedicInsightDrawer.tsx  Pulse.tsx  SavingsCard.tsx  Stats.tsx
dashboard/components/ui/: Badge.tsx  Drawer.tsx  MetricCard.tsx  Sparkline.tsx  StatusTag.tsx
tests/: __init__.py  conftest.py
tests/integration/: __init__.py  test_reliable_node.py
tests/unit/: __init__.py  test_budget.py  test_fuse.py  test_medic.py  test_pricing.py  test_sentinel.py  test_storage.py
