[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "air-os"
version = "0.1.0"
description = "AI Reliability OS - A local-first reliability framework for LangGraph"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "typer>=0.9.0",
    "pydantic>=2.0.0",
    "langgraph", 
    "colorama",
    "rich",
    "groq",
    "python-dotenv"
]

[project.scripts]
air-os = "airos.cli:app"
